modified message system

--- a/application/views/scripts/account/index.json.phtml
+++ b/application/views/scripts/account/index.json.phtml
@@ -1,6 +1,6 @@
 <?php
 
-    $jsonData = json_encode($this->bankAccount);
+    $jsonData = json_encode($this->msg);
     echo $jsonData;
     exit;
 ?>
