--- a/application/views/scripts/account/index.html.phtml
+++ b/application/views/scripts/account/index.html.phtml
@@ -4,9 +4,10 @@
     <body
     <div id="account">                  
     <?php
-            echo 'accountId='.$this->bankAccount->getId().'<br>';
-            echo 'owner='.$this->bankAccount->getOwner().'<br>';
-            echo 'saldo='.$this->bankAccount->getSaldo().'<br>';
+            echo 'status='.$this->msg->status.'<br>';    
+            echo 'accountId='.$this->msg->id.'<br>';
+            echo 'owner='.$this->msg->owner.'<br>';
+            echo 'saldo='.$this->msg->saldo.'<br>';
     ?>
     </div>                          
 </body>
