--- a/application/views/scripts/account/index.html.phtml
+++ b/application/views/scripts/account/index.html.phtml
@@ -7,7 +7,7 @@
             echo 'status='.$this->msg->status.'<br>';    
             echo 'accountId='.$this->msg->id.'<br>';
             echo 'owner='.$this->msg->owner.'<br>';
-            echo 'saldo='.$this->msg->saldo.'<br>';
+            echo 'balance='.$this->msg->balance.'<br>';
     ?>
     </div>                          
 </body>
