--- a/application/views/scripts/transaction/index.xml.phtml
+++ b/application/views/scripts/transaction/index.xml.phtml
@@ -4,14 +4,21 @@ $doc = new DOMDocument();
 $doc->formatOutput = true;
 $root_element = $doc->createElement("response");
 $doc->appendChild($root_element);
- 
-$statusElement = $doc->createElement("success");
-$statusElement->appendChild($doc->createTextNode($this->success));
-$root_element->appendChild($statusElement);
- 
-$versionElement = $doc->createElement("Transaction_version");
-$versionElement->appendChild($doc->createTextNode($this->version));
-$root_element->appendChild($versionElement);
- 
+
+$accountElement = $doc->createElement("status");
+$accountElement->appendChild($doc->createTextNode($this->msg->status));
+$root_element->appendChild($accountElement);
+
+$transactionsElement = $doc->createElement("transactions");
+while(list($key, $val) = each($this->msg->transactions)){
+    $transactionElement = $doc->createElement("transaction");           
+    while(list($keys, $vals) = each($val)){            
+        $transactionElement->setAttribute($keys, $vals);        
+    }
+    $transactionsElement->appendChild($transactionElement);    
+}
+$root_element->appendChild($transactionsElement);
+
+
 print $doc->saveXML();
 ?>
