- Updated database methods - Added mime types to responses

--- a/application/views/scripts/account/get.xml.phtml
+++ b/application/views/scripts/account/get.xml.phtml
@@ -1,4 +1,5 @@
 <?php
+    header("Content-Type: application/xml");
     $doc = new DOMDocument();
     $doc->formatOutput = true;
     $root_element = $doc->createElement("response");
