--- a/application/views/scripts/transaction/post.html.phtml
+++ b/application/views/scripts/transaction/post.html.phtml
@@ -1,4 +1,5 @@
 <?php
+    header("Content-Type: text/html");
     echo '<html>';
     echo '<body';
     echo '<div id="response">';                  
